--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,4 +24,5 @@ dependencies = [
     "opentelemetry-instrumentation-requests>=0.57b0",
     "opentelemetry-sdk>=1.36.0",
     "prometheus-fastapi-instrumentator>=7.1.0",
+    "pytest>=8.4.2",
 ]
