--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,4 +25,6 @@ dependencies = [
     "opentelemetry-sdk>=1.36.0",
     "prometheus-fastapi-instrumentator>=7.1.0",
     "pytest>=8.4.2",
+    "pytest-asyncio>=1.2.0",
+    "pytest-cov>=7.0.0",
 ]
